--- a/src/ui/gastos.ui
+++ b/src/ui/gastos.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>301</width>
-    <height>316</height>
+    <width>506</width>
+    <height>526</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,9 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item row="4" column="0" colspan="4">
       <widget class="QTableView" name="gastosTableView">
        <property name="minimumSize">
@@ -50,10 +53,10 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="0" colspan="2">
+     <item row="13" column="0" colspan="2">
       <widget class="QLineEdit" name="descripcionLine"/>
      </item>
-     <item row="10" column="1">
+     <item row="11" column="1">
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -66,7 +69,7 @@
        </property>
       </spacer>
      </item>
-     <item row="11" column="3">
+     <item row="13" column="3">
       <widget class="QSpinBox" name="gastoSpin">
        <property name="minimumSize">
         <size>
@@ -79,14 +82,14 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="3">
+     <item row="11" column="3">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Gasto:</string>
        </property>
       </widget>
      </item>
-     <item row="10" column="0">
+     <item row="11" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
         <string>Descripcion:</string>
@@ -100,7 +103,7 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="2">
+     <item row="13" column="2">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>$</string>
@@ -153,7 +156,7 @@
        </layout>
       </widget>
      </item>
-     <item row="13" column="0" colspan="4">
+     <item row="14" column="0" colspan="4">
       <widget class="QDialogButtonBox" name="buttonBox">
        <property name="minimumSize">
         <size>
@@ -161,6 +164,59 @@
          <height>0</height>
         </size>
        </property>
+      </widget>
+     </item>
+     <item row="10" column="0">
+      <widget class="QFrame" name="pendienteFrame">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <layout class="QFormLayout" name="formLayout_3">
+        <property name="fieldGrowthPolicy">
+         <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+        </property>
+        <property name="horizontalSpacing">
+         <number>8</number>
+        </property>
+        <property name="verticalSpacing">
+         <number>6</number>
+        </property>
+        <property name="margin">
+         <number>2</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="pendienteLabel">
+          <property name="text">
+           <string>Pendiente</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QCheckBox" name="pendienteCheckBox">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </item>
     </layout>
