--- a/src/ui/gastos.ui
+++ b/src/ui/gastos.ui
@@ -107,8 +107,14 @@
         <property name="leftMargin">
          <number>0</number>
         </property>
+        <property name="topMargin">
+         <number>6</number>
+        </property>
         <property name="rightMargin">
-         <number>5</number>
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>6</number>
         </property>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
@@ -219,6 +225,20 @@
         </item>
         <item row="0" column="1">
          <widget class="QLabel" name="totalLabel">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>Resta Pagar:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="restaLabel">
           <property name="text">
            <string/>
           </property>
