--- a/src/ui/gastos.ui
+++ b/src/ui/gastos.ui
@@ -268,6 +268,9 @@
          <height>0</height>
         </size>
        </property>
+       <property name="maximum">
+        <double>9999.989999999999782</double>
+       </property>
       </widget>
      </item>
     </layout>
